--- a/LeetCode/851-860/852. 山脉数组的峰顶索引（简单）.md
+++ b/LeetCode/851-860/852. 山脉数组的峰顶索引（简单）.md
@@ -18,26 +18,31 @@ Tag : 「二分」、「三分」
 示例 1：
 ```
 输入：arr = [0,1,0]
+
 输出：1
 ```
 示例 2：
 ```
 输入：arr = [0,2,1,0]
+
 输出：1
 ```
 示例 3：
 ```
 输入：arr = [0,10,5,2]
+
 输出：1
 ```
 示例 4：
 ```
 输入：arr = [3,4,5,1]
+
 输出：2
 ```
 示例 5：
 ```
 输入：arr = [24,69,100,99,79,78,67,36,26,19]
+
 输出：2
 ```
 
@@ -66,7 +71,7 @@ Tag : 「二分」、「三分」
 因此我们可以选择任意条件，写出若干「二分」版本。
 
 代码：
-```Java []
+```Java
 class Solution {
     // 根据 arr[i-1] < arr[i] 在 [1,n-1] 范围内找值
     // 峰顶元素为符合条件的最靠近中心的元素
@@ -85,7 +90,7 @@ class Solution {
     }
 }
 ```
-```Java []
+```Java
 class Solution {
     // 根据 arr[i] > arr[i+1] 在 [0,n-2] 范围内找值
     // 峰顶元素为符合条件的最靠近中心的元素值
@@ -104,7 +109,7 @@ class Solution {
     }
 }
 ```
-```Java []
+```Java
 class Solution {
     // 根据 arr[i-1] > arr[i] 在 [1,n-1] 范围内找值
     // 峰顶元素为符合条件的最靠近中心的元素的前一个值
@@ -123,7 +128,7 @@ class Solution {
     }
 }
 ```
-```Java []
+```Java
 class Solution {
     // 根据 arr[i] < arr[i+1] 在 [0,n-2] 范围内找值
     // 峰顶元素为符合条件的最靠近中心的元素的下一个值
@@ -156,7 +161,7 @@ class Solution {
 具体的，由于峰顶元素为全局最大值，因此我们可以每次将当前区间分为 $[l, m1]$、$[m1, m2]$ 和 $[m2, r]$ 三段，如果满足 $arr[m1] > arr[m2]$，说明峰顶元素不可能存在与 $[m2, r]$ 中，让 $r = m2 - 1$ 即可。另外一个区间分析同理。
 
 代码：
-```Java []
+```Java
 class Solution {
     public int peakIndexInMountainArray(int[] arr) {
         int n = arr.length;
@@ -176,6 +181,53 @@ class Solution {
 ```
 * 时间复杂度：$O(\log_3{n})$
 * 空间复杂度：$O(1)$
+
+---
+
+### 二分 & 三分 & k 分 ？
+
+今天比较忙，没有及时回复评论。
+
+看到了评论区有不少关于「三分」否决 1/3 区间存在疑问，感觉挺有代表性的，补充到题解好了 🤣
+
+但必须说明一点，「二分」和「三分」在渐进复杂度上都是一样的，都可以通过换底公式转化为可忽略的常数，因此两者的复杂度都是 $O(\log{n})$。
+
+因此选择「二分」还是「三分」取决于要解决的是什么问题：
+
+* 二分通常用来解决单调函数的找 $target$ 问题，但进一步深入我们发现只需要满足「二段性」就能使用「二分」来找分割点；
+* 三分则是解决单峰函数极值问题。
+
+**因此一般我们将「通过比较两个端点，每次否决 1/3 区间 来解决单峰最值问题」的做法称为「三分」；而不是简单根据单次循环内将区间分为多少份来判定是否为「三分」。**
+
+随手写了一段反例代码：
+```Java
+class Solution {
+    public int peakIndexInMountainArray(int[] arr) {
+        int left = 0, right = arr.length - 1;
+        while(left < right) {
+            int m1 = left + (right - left) / 3;
+            int m2 = right - (right - left + 2) / 3;
+            if (arr[m1] > arr[m1 + 1]) {
+                right = m1;
+            } else if (arr[m2] < arr[m2 + 1]) {
+                left = m2 + 1;
+            } else {
+                left = m1;
+                right = m2;
+            }
+        }
+        return left;
+    }
+}
+```
+
+这并不是「三分」做法，最多称为「变形二分」。本质还是利用「二段性」来做分割的，只不过同时 check 了两个端点而已。
+
+如果这算「三分」的话，那么我能在一次循环里面划分 $k - 1$ 个端点来实现 $k$ 分？
+
+**显然这是没有意义的，因为按照这种思路写出来的所谓的「四分」、「五分」、「k 分」是需要增加同等数量的分支判断的。这时候单次 `while` 决策就不能算作 $O(1)$ 了，而是需要在 $O(k)$ 的复杂度内决定在哪个分支，就跟上述代码有三个分支进行判断一样。** 因此，这种写法只能算作是「变形二分」。
+
+**综上，只有「二分」和「三分」的概念，不存在所谓的 $k$ 分。** 同时题解中的「三分」部分提供的做法就是标准的「三分」做法。
 
 ---
 
