✨feat: Add 剑指 Offer 52

--- a/LeetCode/1871-1880/1877. 数组中最大数对和的最小值（中等）.md
+++ b/LeetCode/1871-1880/1877. 数组中最大数对和的最小值（中等）.md
@@ -68,7 +68,7 @@ $$
 接下来分情况讨论：
 
 * 调整为 $(nums[i], nums[p])$ 和 $(nums[q], nums[j])$：此时最大数对答案为 $nums[q] + nums[j]$，显然 $nums[q] + nums[j] >= nums[i] + nums[j] = ans$。我们要最小化最大数对和，因此该调整方案不会让答案更好；
-* 调整为 $(nums[i] + nums[q])$ 和 $(nums[p], nums[j])$：此时最大数对答案为 $\max(nums[i] + nums[q], nums[p] + nums[j]) = nums[p] + nums[j] >= nums[i] + nums[j] = ans$。我们要最小化最大数对和，因此该调整方案不会让答案更好；
+* 调整为 $(nums[i], nums[q])$ 和 $(nums[p], nums[j])$：此时最大数对答案为 $\max(nums[i] + nums[q], nums[p] + nums[j]) = nums[p] + nums[j] >= nums[i] + nums[j] = ans$。我们要最小化最大数对和，因此该调整方案不会让答案更好；
 
 **上述分析可以归纳推理到每一个“非对称”的数对配对中。**
 
@@ -87,7 +87,7 @@ class Solution {
         Arrays.sort(nums);
         int n = nums.length;
         int ans = nums[0] + nums[n - 1];
-        for (int i = 0, j = n - 1; i <= j; i++, j--) {
+        for (int i = 0, j = n - 1; i < j; i++, j--) {
             ans = Math.max(ans, nums[i] + nums[j]);
         }
         return ans;
