--- a/LeetCode/1871-1880/1877. 数组中最大数对和的最小值（中等）.md
+++ b/LeetCode/1871-1880/1877. 数组中最大数对和的最小值（中等）.md
@@ -99,6 +99,36 @@ class Solution {
 
 ---
 
+### 答疑
+
+关于「证明」部分，不少小伙伴有一些疑问，觉得挺有代表性的，特意加到题解内。
+
+Q1. 「证明」部分是不是缺少了“非对称”得最优的情况？
+
+A1. 并没有，证明的基本思路如下：
+
+1. 猜想对称组数对的方式，会得到最优解；
+
+2. 证明非对称数组不会被对称数对方式更优。
+
+然后我们证明了“非对称方式”不会比“对称方式”更优，因此“对称方式”可以取得最优解。
+
+**至于非对称和非对称之间怎么调整，会更优还是更差，我不关心，也不需要证明，因为已经证明了非对称不会比对称更优。**
+
+Q2. 证明部分的图 $p$、$q$ 是在 $i$、$j$ 内部，那么其他 $p$、$q$、$i$、$j$ 大小关系的情况呢？
+
+A2. 有这个疑问，说明没有重点理解「证明」中的加粗部分（原话）：
+
+> **上述分析可以归纳推理到每一个“非对称”的数对配对中。**
+
+也就是说，上述的分析是可以推广到每一步都成立的，包括第一步，当 $i$ 为排序数组的第一位原始，$j$ 为排序数组中最后一位时，任意 $p$ 和 $q$ 都是在 $i$、$j$ 内部的。
+
+**因此，「证明」对边界情况成立，同时对任意不成“对称”关系的数对也成立（其实也就是「证明」部分中的原话）。**
+
+**更大白话一点是：对于任意“非对称”的数对组合，将其调整为“对称”数对组合，结果不会变差。**
+
+---
+
 ### 最后
 
 这是我们「刷穿 LeetCode」系列文章的第 `No.1877` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
