--- a/LeetCode/1891-1900/1893. 检查是否区域内所有整数都被覆盖（简单）.md
+++ b/LeetCode/1891-1900/1893. 检查是否区域内所有整数都被覆盖（简单）.md
@@ -124,7 +124,7 @@ class Solution {
 
 在朴素的「树状数组」解法中，我们无法直接查询 $[l, r]$ 区间中被覆盖过的个数的根本原因是「某个值可能会被重复添加到树状数组中」。
 
-因此，一种更加优秀的做法：**在往树状数组中添树的时候进行去重，然后通过 $cnt = query(r) - query(l - 1)$ 直接得出 $[l, r]$ 范围内有多少个数被添加过。**
+因此，一种更加优秀的做法：**在往树状数组中添数的时候进行去重，然后通过 $cnt = query(r) - query(l - 1)$ 直接得出 $[l, r]$ 范围内有多少个数被添加过。**
 
 这样的 `Set` 去重操作可以使得我们查询的复杂度从 $O(n\log{C})$ 下降到 $O(\log{C})$。
 
