--- a/LeetCode/1741-1750/1743. 从相邻元素对还原数组（中等）.md
+++ b/LeetCode/1741-1750/1743. 从相邻元素对还原数组（中等）.md
@@ -105,7 +105,7 @@ class Solution {
 
 ### 双向构造（双指针）
 
-在解法一中，我们通过「哈希表」计数得到 $ans$ 首位的原始作为起点，进行「单向构造」。
+在解法一中，我们通过「哈希表」计数得到 $ans$ 首位元素作为起点，进行「单向构造」。
 
 那么是否存在使用任意数值作为起点进行的双向构造呢？
 
@@ -115,7 +115,7 @@ class Solution {
 
 从 $q$ 数组的 **中间位置** 开始，先随便将其中一个元素添加到中间位置，使用「双指针」分别往「两边拓展」（`l` 和 `r` 分别指向左右待插入的位置）。
 
-当 `l` 指针和 `r` 指针直接已经有 $n$ 个数值，说明整个 $ans$ 构造完成，我们将 $[l + 1, r - 1]$ 范围内的数值输出作为答案即可。
+当 `l` 指针和 `r` 指针之间已经有 $n$ 个数值，说明整个 $ans$ 构造完成，我们将 $[l + 1, r - 1]$ 范围内的数值输出作为答案即可。
 
 ![image.png](https://pic.leetcode-cn.com/1627174754-nmCQsk-image.png)
 
