✨Style: Update Style

--- a/LeetCode/1-10/10. 正则表达式匹配（困难）.md
+++ b/LeetCode/1-10/10. 正则表达式匹配（困难）.md
@@ -51,6 +51,7 @@ Tag : 「动态规划」
 * 保证每次出现字符 * 时，前面都匹配到有效的字符
 
 ---
+
 ### 动态规划
 
 整理一下题意，对于字符串 `p` 而言，有三种字符：
@@ -78,7 +79,6 @@ Tag : 「动态规划」
       3.3. 当匹配为 2 个：`f(i,j) = f(i - 2, j - 2) && ((s[i] == p[j - 1] && s[i - 1] == p[j - 1]) || p[j] == '.')`
       
       ...
-      
 
 **我们知道，通过「枚举」来确定 `*` 到底匹配多少个 `a` 这样的做法，算法复杂度是很高的。**
 
@@ -87,7 +87,7 @@ Tag : 「动态规划」
 ![640.png](https://pic.leetcode-cn.com/1611397993-lmpHIZ-640.png)
 
 代码：
-```Java []
+```Java
 class Solution {
     public boolean isMatch(String ss, String pp) {
         // 技巧：往原字符头部插入空格，这样得到 char 数组是从 1 开始，而且可以使得 f[0][0] = true，可以将 true 这个结果滚动下去
@@ -126,6 +126,7 @@ class Solution {
 
 
 ---
+
 ### 最后
 
 这是我们「刷穿 LeetCode」系列文章的第 `No.10` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先将所有不带锁的题目刷完。
