--- a/LeetCode/261-270/264. 丑数 II（中等）.md
+++ b/LeetCode/261-270/264. 丑数 II（中等）.md
@@ -39,7 +39,7 @@ Tag : 「多路归并」、「堆」、「优先队列」
 * $1$ 是最小的丑数。
 * 对于任意一个丑数 $x$，其与任意的质因数（$2$、$3$、$5$）相乘，结果（$2x$、$3x$、$5x$）仍为丑数。
 
-***
+---
 
 ### 优先队列（小根堆）解法
 
@@ -53,7 +53,7 @@ Tag : 「多路归并」、「堆」、「优先队列」
 为了防止同一丑数多次进队，我们需要使用数据结构 $Set$ 来记录入过队列的丑数。
 
 代码：
-```java []
+```java
 class Solution {
     int[] nums = new int[]{2,3,5};
     public int nthUglyNumber(int n) {
@@ -79,7 +79,7 @@ class Solution {
 * 时间复杂度：从优先队列中取最小值为 $O(1)$，往优先队列中添加元素复杂度为 $O(\log{n})$。整体复杂度为 $O(n\log{n})$
 * 空间复杂度：$O(n)$
 
-***
+---
 
 ### 多路归并（多指针）解法
 
@@ -100,7 +100,7 @@ class Solution {
 因此我们可以使用三个指针来指向目标序列 $arr$ 的某个下标（下标 $0$ 作为哨兵不使用，起始都为 $1$），使用 $arr[下标] * 质因数$ 代表当前使用到三个有序序列中的哪一位，同时使用 $idx$ 表示当前生成到 $arr$ 哪一位丑数。
 
 代码：
-```java []
+```java
 class Solution {
     public int nthUglyNumber(int n) {
         // ans 用作存储已有丑数（从下标 1 开始存储，第一个丑数为 1）
