--- a/LeetCode/611-620/611. 有效三角形的个数（中等）.md
+++ b/LeetCode/611-620/611. 有效三角形的个数（中等）.md
@@ -28,7 +28,7 @@ Tag : 「排序」、「二分」、「双指针」
 
 ### 基本分析
 
-**根据题意，是要我们统计所有符合 $nums[k] + nums[j] < nums[i]$ 条件的三元组 $(k,j,i)$ 的个数。**
+**根据题意，是要我们统计所有符合 $nums[k] + nums[j] > nums[i]$ 条件的三元组 $(k,j,i)$ 的个数。**
 
 为了防止统计重复的三元组，我们可以先对数组进行排序，然后采取「先枚举较大数；在下标不超过较大数下标范围内，找次大数；在下标不超过次大数下标范围内，找较小数」的策略。
 
@@ -67,12 +67,12 @@ class Solution {
 
 根据我们以前讲过的的 [优化枚举的基本思路](https://leetcode-cn.com/problems/number-of-submatrices-that-sum-to-target/solution/gong-shui-san-xie-you-hua-mei-ju-de-ji-b-uttw/)，要找符合条件的三元组，其中一个切入点可以是「枚举三元组中的两个值，然后优化找第三数的逻辑」。
 
-我们发现，在数组有序的前提下，**当枚举到较大数下标 $i$ 和次大数下标 $j$ 时，在 $[0, j)$ 范围内找的符合 $nums[k'] + nums[j] < nums[i]$ 条件的 $k'$ 的集合时，以符合条件的最小下标 $k$ 为分割点的数轴上具有「二段性」。**
+我们发现，在数组有序的前提下，**当枚举到较大数下标 $i$ 和次大数下标 $j$ 时，在 $[0, j)$ 范围内找的符合 $nums[k'] + nums[j] > nums[i]$ 条件的 $k'$ 的集合时，以符合条件的最小下标 $k$ 为分割点的数轴上具有「二段性」。**
 
 令 $k$ 为符合条件的最小下标，那么在 $nums[i]$ 和 $nums[j]$ 固定时，$[0,j)$ 范围内：
 
-* 下标大于等于 $k$ 的点集符合条件 $nums[k'] + nums[j] < nums[i]$；
-* 下标小于 $k$ 的点集合不符合条件 $nums[k'] + nums[j] < nums[i]$。
+* 下标大于等于 $k$ 的点集符合条件 $nums[k'] + nums[j] > nums[i]$；
+* 下标小于 $k$ 的点集合不符合条件 $nums[k'] + nums[j] > nums[i]$。
 
 因此我们可以通过「二分」找到这个分割点 $k$，在 $[k,j)$ 范围内即是固定 $j$ 和 $i$ 时，符合条件的 $k'$ 的个数。
 
@@ -107,7 +107,7 @@ class Solution {
 
 ### 排序 + 双指针
 
-更进一步我们发现，当我们在枚举较大数下标 $i$，并在 $[0, i)$ 范围内逐步减小下标（由于数组有序，也就是逐步减少值）找次大值下标 $j$ 时，符合条件的 $k'$ 必然是从 $0$ 逐步递增（这是由三角不等式 $nums[k] + nums[j] < nums[i]$ 所决定的）。
+更进一步我们发现，当我们在枚举较大数下标 $i$，并在 $[0, i)$ 范围内逐步减小下标（由于数组有序，也就是逐步减少值）找次大值下标 $j$ 时，符合条件的 $k'$ 必然是从 $0$ 逐步递增（这是由三角不等式 $nums[k] + nums[j] > nums[i]$ 所决定的）。
 
 因此，我们可以枚举较大数下标 $i$ 时，在 $[0, i)$ 范围内通过双指针，以逐步减少下标的方式枚举 $j$，并在遇到不满足条件的 $k$ 时，增大 $k$ 下标。从而找到所有符合条件三元组的个数。
 
