--- a/LeetCode/841-850/847. 访问所有节点的最短路径（困难）.md
+++ b/LeetCode/841-850/847. 访问所有节点的最短路径（困难）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[847. 访问所有节点的最短路径](https://leetcode-cn.com/problems/shortest-path-visiting-all-nodes/solution/gong-shui-san-xie-yi-ti-shuang-jie-bfs-z-6p2k/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[847. 访问所有节点的最短路径](https://leetcode-cn.com/problems/shortest-path-visiting-all-nodes/solution/gong-shui-san-xie-yi-ti-shuang-jie-bfs-z-6p2k/)** ，难度为 **困难**。
 
 Tag : 「图」、「图论 BFS」、「动态规划」、「状态压缩」
 
