--- a/LeetCode/441-450/446. 等差数列划分 II - 子序列（困难）.md
+++ b/LeetCode/441-450/446. 等差数列划分 II - 子序列（困难）.md
@@ -85,7 +85,7 @@ Tag : 「动态规划」、「序列 DP」、「容斥原理」、「数学」
 至于具体的状态转移方程，我们令差值 $d = nums[i] - nums[j]$，显然有（先不考虑长度至少为 $3$ 的限制）：
 
 $$
-f[i][d] = \sum_{j = 0}^{i - 1} f[j][d] + 1
+f[i][d] = \sum_{j = 0}^{i - 1} (f[j][d] + 1)
 $$
 
 含义为：**在原本以 $nums[j]$ 为结尾的，且差值为 $d$ 的子序列的基础上接上 $nums[i]$，再加上新的子序列 $(nums[j], nums[i])$，共 $f[j][d] + 1$ 个子序列。**
