--- a/LeetCode/521-530/525. 连续数组（中等）.md
+++ b/LeetCode/521-530/525. 连续数组（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[525. 连续数组]()** ，难度为 **中等**。
+这是 LeetCode 上的 **[525. 连续数组](https://leetcode-cn.com/problems/contiguous-array/solution/gong-shui-san-xie-qian-zhui-he-ha-xi-bia-q400/)** ，难度为 **中等**。
 
 Tag : 「前缀和」
 
