--- a/LeetCode/521-530/526. 优美的排列（中等）.md
+++ b/LeetCode/521-530/526. 优美的排列（中等）.md
@@ -129,7 +129,7 @@ $$
 代码：
 ```Java
 class Solution {
-    int getLen(int x) {
+    int getCnt(int x) {
         int ans = 0;
         while (x != 0) {
             x -= (x & -x); // lowbit
@@ -144,7 +144,7 @@ class Solution {
         // 枚举所有的状态
         for (int state = 1; state < mask; state++) {
             // 计算 state 有多少个 1（也就是当前排序长度为多少）
-            int cnt = getLen(state);
+            int cnt = getCnt(state);
             // 枚举最后一位数值为多少
             for (int i = 0; i < n; i++) {
                 // 数值在 state 中必须是 1
