--- a/LeetCode/521-530/526. 优美的排列（中等）.md
+++ b/LeetCode/521-530/526. 优美的排列（中等）.md
@@ -120,10 +120,10 @@ class Solution {
 
 因此我们需要一个计算 $state$ 的 $1$ 的个数的方法，这里使用 $lowbit$ 实现即可。
 
-最终的 $f[i][state]$ 为当前位置选择的是所有合法值的方案数之和：
+最终的 $f[state]$ 为当前位置选择的是所有合法值的方案数之和：
 
 $$
-f[state] = f[state \& ( \lnot (1 << i))]
+f[state] = \sum_{i = 0}^{n}f[state \& ( \lnot (1 << i))]
 $$
 
 代码：
