--- a/LeetCode/551-560/551. 学生出勤记录 I（简单）.md
+++ b/LeetCode/551-560/551. 学生出勤记录 I（简单）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[551. 学生出勤记录 I](https://leetcode-cn.com/problems/student-attendance-record-i/solution/gong-shui-san-xie-jian-dan-mo-ni-ti-by-a-hui7/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[551. 学生出勤记录 I](https://leetcode-cn.com/problems/student-attendance-record-i/solution/gong-shui-san-xie-jian-dan-mo-ni-ti-by-a-hui7/)** ，难度为 **简单**。
 
 Tag : 「模拟」
 
