--- a/LeetCode/1711-1720/1713. 得到子序列的最少操作次数（困难）.md
+++ b/LeetCode/1711-1720/1713. 得到子序列的最少操作次数（困难）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[1713. 得到子序列的最少操作次数](https://leetcode-cn.com/problems/minimum-operations-to-make-a-subsequence/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-oj7yu/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[1713. 得到子序列的最少操作次数](https://leetcode-cn.com/problems/minimum-operations-to-make-a-subsequence/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-oj7yu/)** ，难度为 **困难**。
 
 Tag : 「最长公共子序列」、「最长上升子序列」、「贪心」、「二分」
 
